bug fix overlap cstore-template

--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -109,10 +109,15 @@ img{
 }
 
 /* deal copy */
+.promo-container{
+    position: relative;
+    z-index: 4;
+}
+
 .mask{
     position: absolute;
     top: 50px;
-    left: -145px;
+    left: -146px;
     display: block;
     width: 520px;
     z-index: 0;
@@ -121,12 +126,14 @@ img{
 }
 .price-info{
     display: flex;
+    position: relative;
     flex-direction: column;
     align-items: flex-start;
     margin-top: 50px;
     margin-left: 70px;
     
 }
+
 #money-value{
     z-index: -10;
     position: relative;
